<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_bg"
    tools:context="co.hega.hegaerp.ui.Forget">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:id="@+id/textView66"
        android:textColor="#ffffff"
        android:textSize="50sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/footer"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Back to login"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:paddingTop="15dp"
            android:id="@+id/bckLogin1"
            android:onClick="bcLogin1" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            class="android.support.v4.widget.Space"
            android:layout_marginTop="30dp"
            android:id="@+id/view3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />

        <Button
            android:text="Send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button55"
            android:background="#16a085"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/mail"
            android:layout_alignLeft="@+id/mail"
            android:layout_alignStart="@+id/mail"
            android:layout_alignRight="@+id/mail"
            android:layout_alignEnd="@+id/mail" />

        <TextView
            android:text="@string/fpass"
            android:layout_height="wrap_content"
            android:id="@+id/textView88"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:layout_width="250dp"
            android:layout_above="@+id/button55"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/mail"
            android:hint="@string/edt2"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:background="#60f7f7f7"
            android:layout_width="250dp"
            android:password="false"
            android:layout_marginTop="190dp"
            android:layout_below="@+id/view3"
            android:layout_alignLeft="@+id/textView88"
            android:layout_alignStart="@+id/textView88" />
    </RelativeLayout>

</RelativeLayout>
